packages/dartcv/src/dnn/dnn.h

CvStatus* cv_dnn_Net_fromNet(Net net, CVD_OUT Net* rval, CvCallback_0 callback);
CvStatus* cv_dnn_Net_readNet(
    const char* model,
    const char* config,
    const char* framework,
    CVD_OUT Net* rval,
    CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetBytes(
    const char* framework, VecUChar model, VecUChar config, CVD_OUT Net* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetFromCaffe(
    const char* prototxt, const char* caffeModel, CVD_OUT Net* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetFromCaffeBytes(
    VecUChar prototxt, VecUChar caffeModel, CVD_OUT Net* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetFromTFLite(const char* model, CVD_OUT Net* rval, CvCallback_0 callback);
CvStatus* cv_dnn_Net_readNetFromTFLiteBytes(
    VecUChar bufferModel, CVD_OUT Net* rval, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_readNetFromONNX(const char* model, CVD_OUT Net* rval, CvCallback_0 callback);
CvStatus* cv_dnn_Net_readNetFromONNXBytes(VecUChar model, CVD_OUT Net* rval, CvCallback_0 callback);
CvStatus* cv_dnn_Net_forwardLayers(
    Net net, CVD_OUT VecMat* outputBlobs, VecVecChar outBlobNames, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_getPerfProfile(
    Net net, CVD_OUT int64_t* rval, VecF64* layersTimes, CvCallback_0 callback
);
CvStatus* cv_dnn_Net_getUnconnectedOutLayers(Net net, CVD_OUT VecI32* rval, CvCallback_0 callback);
CvStatus* cv_dnn_Net_getLayerNames(Net net, CVD_OUT VecVecChar* rval, CvCallback_0 callback);
CvStatus* cv_dnn_Net_getInputDetails(
    Net net, CVD_OUT VecF32* scales, CVD_OUT VecI32* zeropoints, CvCallback_0 callback
);
// Layer
CvStatus* cv_dnn_Net_getLayer(Net net, int layerid, CVD_OUT Layer* rval);