packages/dartcv/lib/src/g/dnn.g.dart


  late final _cv_dnn_Net_forwardLayersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Net, ffi.Pointer<VecMat>, VecVecChar,
              imp1.CvCallback_0)>>('cv_dnn_Net_forwardLayers');
  late final _cv_dnn_Net_forwardLayers =
      _cv_dnn_Net_forwardLayersPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Net, ffi.Pointer<VecMat>, VecVecChar, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_fromNet(
    Net net,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_fromNet(
      net,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_fromNetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Net, ffi.Pointer<Net>, imp1.CvCallback_0)>>('cv_dnn_Net_fromNet');
  late final _cv_dnn_Net_fromNet = _cv_dnn_Net_fromNetPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Net, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_getBlobChannel(
    Mat blob,
    int imgidx,
    int chnidx,
    Mat rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_getBlobChannel(
      blob,
      imgidx,
      chnidx,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_getBlobChannelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, Mat,
              imp1.CvCallback_0)>>('cv_dnn_Net_getBlobChannel');
  late final _cv_dnn_Net_getBlobChannel =
      _cv_dnn_Net_getBlobChannelPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, int, int, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_getBlobSize(
    Mat blob,
    ffi.Pointer<VecI32> rval,
  ) {
    return _cv_dnn_Net_getBlobSize(
      blob,
      rval,
    );
  }

  late final _cv_dnn_Net_getBlobSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<VecI32>)>>('cv_dnn_Net_getBlobSize');
  late final _cv_dnn_Net_getBlobSize = _cv_dnn_Net_getBlobSizePtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecI32>)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_getInputDetails(
    Net net,
    ffi.Pointer<VecF32> scales,
    ffi.Pointer<VecI32> zeropoints,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_getInputDetails(
      net,
      scales,
      zeropoints,
      callback,
    );
  }

  late final _cv_dnn_Net_getInputDetailsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Net,
              ffi.Pointer<VecF32>,
              ffi.Pointer<VecI32>,
              imp1.CvCallback_0)>>('cv_dnn_Net_getInputDetails');
  late final _cv_dnn_Net_getInputDetails =
      _cv_dnn_Net_getInputDetailsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Net, ffi.Pointer<VecF32>,
              ffi.Pointer<VecI32>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_getLayer(
    Net net,
    int layerid,
    ffi.Pointer<Layer> rval,
  ) {
    return _cv_dnn_Net_getLayer(
      net,
      layerid,
      rval,
    );
  }

  late final _cv_dnn_Net_getLayerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Net, ffi.Int, ffi.Pointer<Layer>)>>('cv_dnn_Net_getLayer');
  late final _cv_dnn_Net_getLayer = _cv_dnn_Net_getLayerPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Net, int, ffi.Pointer<Layer>)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_getLayerNames(
    Net net,
    ffi.Pointer<VecVecChar> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_getLayerNames(
      net,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_getLayerNamesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Net, ffi.Pointer<VecVecChar>,
              imp1.CvCallback_0)>>('cv_dnn_Net_getLayerNames');
  late final _cv_dnn_Net_getLayerNames =
      _cv_dnn_Net_getLayerNamesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Net, ffi.Pointer<VecVecChar>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_getPerfProfile(
    Net net,
    ffi.Pointer<ffi.Int64> rval,
    ffi.Pointer<VecF64> layersTimes,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_getPerfProfile(
      net,
      rval,
      layersTimes,
      callback,
    );
  }

  late final _cv_dnn_Net_getPerfProfilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Net,
              ffi.Pointer<ffi.Int64>,
              ffi.Pointer<VecF64>,
              imp1.CvCallback_0)>>('cv_dnn_Net_getPerfProfile');
  late final _cv_dnn_Net_getPerfProfile =
      _cv_dnn_Net_getPerfProfilePtr.asFunction<
          ffi.Pointer<CvStatus> Function(Net, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<VecF64>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_getUnconnectedOutLayers(
    Net net,
    ffi.Pointer<VecI32> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_getUnconnectedOutLayers(
      net,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_getUnconnectedOutLayersPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Net, ffi.Pointer<VecI32>,
              imp1.CvCallback_0)>>('cv_dnn_Net_getUnconnectedOutLayers');
  late final _cv_dnn_Net_getUnconnectedOutLayers =
      _cv_dnn_Net_getUnconnectedOutLayersPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Net, ffi.Pointer<VecI32>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_imagesFromBlob(
    Mat blob,
    ffi.Pointer<VecMat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_imagesFromBlob(
      blob,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_imagesFromBlobPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecMat>,
              imp1.CvCallback_0)>>('cv_dnn_Net_imagesFromBlob');
  late final _cv_dnn_Net_imagesFromBlob =
      _cv_dnn_Net_imagesFromBlobPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<VecMat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNet(
    ffi.Pointer<ffi.Char> model,
    ffi.Pointer<ffi.Char> config,
    ffi.Pointer<ffi.Char> framework,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNet(
      model,
      config,
      framework,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNet');
  late final _cv_dnn_Net_readNet = _cv_dnn_Net_readNetPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<Net>,
          imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetBytes(
    ffi.Pointer<ffi.Char> framework,
    VecUChar model,
    VecUChar config,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetBytes(
      framework,
      model,
      config,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              VecUChar,
              VecUChar,
              ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetBytes');
  late final _cv_dnn_Net_readNetBytes = _cv_dnn_Net_readNetBytesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>, VecUChar, VecUChar,
          ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromCaffe(
    ffi.Pointer<ffi.Char> prototxt,
    ffi.Pointer<ffi.Char> caffeModel,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromCaffe(
      prototxt,
      caffeModel,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromCaffePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromCaffe');
  late final _cv_dnn_Net_readNetFromCaffe =
      _cv_dnn_Net_readNetFromCaffePtr.asFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromCaffeBytes(
    VecUChar prototxt,
    VecUChar caffeModel,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromCaffeBytes(
      prototxt,
      caffeModel,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromCaffeBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecUChar, VecUChar, ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromCaffeBytes');
  late final _cv_dnn_Net_readNetFromCaffeBytes =
      _cv_dnn_Net_readNetFromCaffeBytesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecUChar, VecUChar, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromONNX(
    ffi.Pointer<ffi.Char> model,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromONNX(
      model,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromONNXPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromONNX');
  late final _cv_dnn_Net_readNetFromONNX =
      _cv_dnn_Net_readNetFromONNXPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromONNXBytes(
    VecUChar model,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromONNXBytes(
      model,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromONNXBytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecUChar, ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromONNXBytes');
  late final _cv_dnn_Net_readNetFromONNXBytes =
      _cv_dnn_Net_readNetFromONNXBytesPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecUChar, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromTFLite(
    ffi.Pointer<ffi.Char> model,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromTFLite(
      model,
      rval,
      callback,
    );
  }

  late final _cv_dnn_Net_readNetFromTFLitePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<Net>,
              imp1.CvCallback_0)>>('cv_dnn_Net_readNetFromTFLite');
  late final _cv_dnn_Net_readNetFromTFLite =
      _cv_dnn_Net_readNetFromTFLitePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<Net>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_dnn_Net_readNetFromTFLiteBytes(
    VecUChar bufferModel,
    ffi.Pointer<Net> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_dnn_Net_readNetFromTFLiteBytes(
      bufferModel,
      rval,
      callback,
    );
  }
